# incode-risk-model

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  sst-env.d.ts  sst.config.ts  sst.pyi
risk_model/: Dockerfile  handler.py  model.cbm  model_metadata.json  pyproject.toml  requirements.txt
