[project]
name = "risk-model"
version = "0.1.0"
description = "CatBoost fraud risk scoring model for Lambda"
requires-python = "==3.11.*"
dependencies = [
    "catboost==1.2.5",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "ujson==5.10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["risk_model"]
package-dir = {"risk_model" = "."}

[tool.setuptools.package-data]
risk_model = ["*.cbm", "*.json"]
